--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Hello boys</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem laudantium provident voluptatem ipsum accusantium sint error, vel eligendi vero architecto at nobis sequi saepe iste quis, officiis deserunt velit. Illo!</p>
 </body>
 </html>
